--- a/src/template.html
+++ b/src/template.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Profile</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
-    
+    <header>
+        <h1>My Team</h1>
+    </header>
+
+    <main>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+              <p>Marcus</p>
+              <p>Manager</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">ID:</li>
+              <li class="list-group-item"><a href = "mailto: ">skdjfh</a> </li>
+              <li class="list-group-item">Office number: </li>
+            </ul>
+          </div>
+    </main>
 </body>
 </html>
