updated team building and init html gen

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,31 @@
     </header>
 
     <main>
-        <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 18rem;">
+              <div class="card-header">
+                <p>Marcus</p>
+                <p>Manager</p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID:</li>
+                <li class="list-group-item"><a href = "mailto: ">skdjfh</a> </li>
+                <li class="list-group-item">Office number: </li>
+              </ul>
+          </div>
+
+          <div class="card" style="width: 18rem;">
+            <div class="card-header">
+              <p>Marcus</p>
+              <p>Manager</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">ID:</li>
+              <li class="list-group-item"><a href = "mailto: ">skdjfh</a> </li>
+              <li class="list-group-item">Office number: </li>
+            </ul>
+          </div>
+
+          <div class="card" style="width: 18rem;">
             <div class="card-header">
               <p>Marcus</p>
               <p>Manager</p>
