--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
         <h1>My Team</h1>
     </header>
 
-    <main>
+    <main class="addtome">
           <div class="card" style="width: 18rem;">
               <div class="card-header">
                 <p>Marcus</p>
@@ -20,33 +20,9 @@
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID:</li>
-                <li class="list-group-item"><a href = "mailto: ">skdjfh</a> </li>
-                <li class="list-group-item">Office number: </li>
+                <li class="list-group-item"><a href = "mailto: "></a> </li>
+                <li class="list-group-item"><a href = "https://github.com/"></a> </li>
               </ul>
-          </div>
-
-          <div class="card" style="width: 18rem;">
-            <div class="card-header">
-              <p>Marcus</p>
-              <p>Manager</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">ID:</li>
-              <li class="list-group-item"><a href = "mailto: ">skdjfh</a> </li>
-              <li class="list-group-item">Office number: </li>
-            </ul>
-          </div>
-
-          <div class="card" style="width: 18rem;">
-            <div class="card-header">
-              <p>Marcus</p>
-              <p>Manager</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">ID:</li>
-              <li class="list-group-item"><a href = "mailto: ">skdjfh</a> </li>
-              <li class="list-group-item">Office number: </li>
-            </ul>
           </div>
     </main>
 </body>
