--- a/index.HTML
+++ b/index.HTML
@@ -19,9 +19,9 @@
                     <p>Manager</p>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">ID: 1234</li>
-                    <li class="list-group-item"><a href = "mailto: gmail">gmail</a> </li>
-                    <li class="list-group-item">Office Number: 1234</a></li>
+                    <li class="list-group-item">ID: 23456</li>
+                    <li class="list-group-item"><a href = "mailto: marcus@kohls.com">marcus@kohls.com</a> </li>
+                    <li class="list-group-item">Office Number: 234224</a></li>
                   </ul>
               </div>
 
@@ -31,21 +31,21 @@
                     <p>Engineer</p>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">ID: sdf</li>
-                    <li class="list-group-item"><a href = "mailto: sdf">sdf</a> </li>
-                    <li class="list-group-item">GitHub: <a href = "https://github.com/dsfsfd">dsfsfd</a></li>
+                    <li class="list-group-item">ID: 12345</li>
+                    <li class="list-group-item"><a href = "mailto: kaitlin@gmail.com">kaitlin@gmail.com</a> </li>
+                    <li class="list-group-item">GitHub: <a href = "https://github.com/KaitlinC">KaitlinC</a></li>
                   </ul>
               </div>
 
               <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <p>sdfsfdfs</p>
+                    <p>Dave</p>
                     <p>Intern</p>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">ID: sfdfsfsd</li>
-                    <li class="list-group-item"><a href = "mailto: sdfsfdsf">sdfsfdsf</a> </li>
-                    <li class="list-group-item">School: sfdfsfdf</li>
+                    <li class="list-group-item">ID: 5675675</li>
+                    <li class="list-group-item"><a href = "mailto: dave@gmail.com">dave@gmail.com</a> </li>
+                    <li class="list-group-item">School: UofM</li>
                   </ul>
               </div>
         </main>
