--- a/index.HTML
+++ b/index.HTML
@@ -19,21 +19,21 @@
                     <p>Manager</p>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">ID: 23456</li>
+                    <li class="list-group-item">ID: 1234</li>
                     <li class="list-group-item"><a href = "mailto: marcus@kohls.com">marcus@kohls.com</a> </li>
-                    <li class="list-group-item">Office Number: 234224</a></li>
+                    <li class="list-group-item">Office Number: 22</a></li>
                   </ul>
               </div>
 
               <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <p>Kaitlin</p>
+                    <p>Kaitlin </p>
                     <p>Engineer</p>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">ID: 12345</li>
-                    <li class="list-group-item"><a href = "mailto: kaitlin@gmail.com">kaitlin@gmail.com</a> </li>
-                    <li class="list-group-item">GitHub: <a href = "https://github.com/KaitlinC">KaitlinC</a></li>
+                    <li class="list-group-item">ID: 234234</li>
+                    <li class="list-group-item"><a href = "mailto: kaitlin@kohls.com">kaitlin@kohls.com</a> </li>
+                    <li class="list-group-item">GitHub: <a href = "https://github.com/kaitlinr">kaitlinr</a></li>
                   </ul>
               </div>
 
@@ -43,9 +43,9 @@
                     <p>Intern</p>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">ID: 5675675</li>
-                    <li class="list-group-item"><a href = "mailto: dave@gmail.com">dave@gmail.com</a> </li>
-                    <li class="list-group-item">School: UofM</li>
+                    <li class="list-group-item">ID: 123123</li>
+                    <li class="list-group-item"><a href = "mailto: dave@kohls.com">dave@kohls.com</a> </li>
+                    <li class="list-group-item">School: NC State</li>
                   </ul>
               </div>
         </main>
